--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loading-spin": "^2.1.9",
+    "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
