--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loading-spin": "^2.1.9",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "typo-js": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
