--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -5,6 +5,7 @@ name: Deploy to Firebase Hosting on PR
 'on': pull_request
 jobs:
   build:
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     uses: ./.github/workflows/build.yml
   preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
