--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "install": "^0.13.0",
+    "nspell": "^2.1.5",
     "openai": "^4.7.1",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loading-spin": "^2.1.9",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
-    "typo-js": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
