--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "install": "^0.13.0",
