--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "install": "^0.13.0",
     "nspell": "^2.1.5",
     "openai": "^4.7.1",
+    "p5": "^1.7.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loading-spin": "^2.1.9",
+    "react-p5": "^1.4.1",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
+    "three": "0.121.0",
     "tw-elements": "^1.0.0",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
